# hardness_conversion

./: Cargo.toml
src/: 18265_A1.csv  18265_B2.csv  18265_B3.csv  18265_B4.csv  18265_C2.csv  18265_D2.csv  18265_F2.csv  errors.rs  konstanten.rs  lib.rs  tools.rs  trait_umwerter.rs  umwerter_tabelle_18265_a1.rs  umwerter_tabelle_18265_b2.rs  umwerter_tabelle_18265_b3.rs  umwerter_tabelle_18265_b4.rs  umwerter_tabelle_18265_c2.rs  umwerter_tabelle_18265_d2.rs  umwerter_tabelle_18265_f2.rs
tests/: test_umwerter.rs
