[package]
name = "umwerter"
version = "0.1.0"
authors = ["Ingo Buescher <gallatin@gmx.net>"]

[dependencies]
clap = "*"

csv = "1.0.0-beta.5"
#regex = "0.2"
#lazy_static = "0.2.8"
#error-chain = "0.11.0"

regex = "*"
lazy_static = "*"
error-chain = "*"

gtk = { version = "0.3.0", features = ["v3_22"] }
gio = "0.3.0"
