[package]
name = "umwerter"
version = "0.1.0"
authors = ["Ingo Buescher <gallatin@gmx.net>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }

csv = "1.0.0"

regex = "*"
lazy_static = "*"
thiserror = "1.0.19"
anyhow = "1.0"

#gtk = { version = "0.16.0", features = ["v3_24"] }
#gio = "0.16.0"

gtk = { version = "0.3.0", features = ["v3_22"] }
gio = "0.3.0"
